# CMake-NDK

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yanyuanquan/cmakedemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/yanyuanquan/cmakedemo2/: MainActivity.java  TestNDK.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yanyuanquan/cmakedemo2/: ExampleUnitTest.java
